--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.4.3",
     "react-simple-typewriter": "^3.0.1",
     "react-typical": "^0.1.3",
     "three": "^0.137.5",
